crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__select_recovery_5.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"''.lower().\"#)"
---
Node {
    node: Selector(
        SelectorExpr {
            value: Node {
                node: Call(
                    CallExpr {
                        func: Node {
                            node: Selector(
                                SelectorExpr {
                                    value: Node {
                                        node: StringLit(
                                            StringLit {
                                                is_long_string: false,
                                                raw_value: "''",
                                                value: "",
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 0,
                                        end_line: 1,
                                        end_column: 2,
                                    },
                                    attr: Node {
                                        node: Identifier {
                                            names: [
                                                Node {
                                                    node: "lower",
                                                    filename: "",
                                                    line: 1,
                                                    column: 3,
                                                    end_line: 1,
                                                    end_column: 8,
                                                },
                                            ],
                                            pkgpath: "",
                                            ctx: Load,
                                        },
                                        filename: "",
                                        line: 1,
                                        column: 3,
                                        end_line: 1,
                                        end_column: 8,
                                    },
                                    ctx: Load,
                                    has_question: false,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 8,
                        },
                        args: [],
                        keywords: [],
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 10,
            },
            attr: Node {
                node: Identifier {
                    names: [
                        Node {
                            node: "",
                            filename: "",
                            line: 1,
                            column: 11,
                            end_line: 1,
                            end_column: 11,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 11,
                end_line: 1,
                end_column: 11,
            },
            ctx: Load,
            has_question: false,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 11,
}
