crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__string_literal_recovery_4.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"r''abc'\")"
---
Node {
    node: StringLit(
        StringLit {
            is_long_string: false,
            raw_value: "r''",
            value: "",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}
